# Automata

./: .cproject  .project  Automata.cpp  Automata.h  CA.py  CMakeLists.txt  GameOfLife.ipynb  README.md  a.out  automata  diphaFormat.py  movie.py  setup.py  test.csv  test.py  test2.py  test3.py
src/: Automata.cpp  Automata.h  Conway.cpp  Conway.h  Set.cpp  Set.h  bindings.cpp
src/automata.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
